--- a/app/static/package.json
+++ b/app/static/package.json
@@ -22,8 +22,13 @@
         "webpack-cli": "^4.4.0"
     },
     "dependencies": {
+        "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
+        "css-loader": "^5.0.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-bootstrap": "^1.4.3",
+        "react-dom": "^17.0.1",
+        "style-loader": "^2.0.0"
     },
     "babel": {
         "presets": [
